--- a/02college/css/style.css
+++ b/02college/css/style.css
@@ -289,8 +289,67 @@ body {
     width: 1200px;
     margin: 0 auto;
 }
+#footer ul {
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+#footer li:nth-child(1)::after {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 20px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    left: 95px;
+}
+#footer li:nth-child(2)::after {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 20px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    left: 220px;
+}
+#footer li:nth-child(3)::after {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 20px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    left: 370px;
+}
+#footer li:nth-child(4)::after {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 20px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    left: 470px;
+}
+#footer li:nth-child(5)::after {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 20px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    left: 660px;
+}
 #footer li {
     float: left;
-    padding: 5px;
+    padding: 5px 25px;
+}
+#footer .txt {
+    font-size: 12px;
+    color: rgb(112, 112, 112);
 }
 
