--- a/02college/css/style.css
+++ b/02college/css/style.css
@@ -191,10 +191,12 @@ body {
     color: #fff;
     font-size: 20px;
     padding: 8px;
+    margin-bottom: 20px;
 }
 .container>ul>li:nth-child(3)>ul>li>a {
     color: #fff;
     float: left;
+    margin-right: 15px;
 }
 .container>ul>li:nth-child(4){
     padding: 5px;
