--- a/02college/css/style.css
+++ b/02college/css/style.css
@@ -143,6 +143,9 @@ body {
     border: 0 none;
     box-shadow: 0 none;
 }
+.container>ul>li:nth-child(1) .bx-pager {
+    bottom: 30px;
+}
 .container>ul>li:nth-child(1) .txt {
     font-size: 50px;
     color: rgb(12, 12, 148);
@@ -224,13 +227,6 @@ body {
     height: 225px;
     background-color: #fff;
 }
-.container>ul>li:nth-child(5) .news {
-    float: left;
-}
-.container>ul>li:nth-child(5) h3 {
-    padding: 8px;
-    font-size: 20px;
-}
 .container>ul>li:nth-child(5) .sns {
     float: right;
 }
@@ -277,6 +273,9 @@ body {
     border: 0 none;
     box-shadow: 0 none;
 }
+.container>ul>li:nth-child(8) .bx-pager {
+    top: 10px;
+}
 .container>ul>li:nth-child(8) .txt {
     color: #f00;
     position: absolute;
@@ -309,8 +308,6 @@ body {
     position: absolute;
     background-color: #fff;
     top: 25px;
-
-
 }
 .bottom li {
     float: left;
@@ -318,10 +315,12 @@ body {
 }
 .bottom li:nth-child(1) {
     padding: 0 25px;
+    font-weight: bold;
 }
 .bottom li:nth-child(2) {
     position: relative;
     padding: 0 25px;
+    font-weight: bold;
 }
 .bottom li:nth-child(2)::after {
     content: "";
@@ -331,7 +330,7 @@ body {
     background-color: #000;
     position: absolute;
     top: 0;
-    left: 120px;
+    left: 130px;
 }
 .bottom li:nth-child(3) {
     padding: 0 25px;
