--- a/03traval/css/style.css
+++ b/03traval/css/style.css
@@ -11,6 +11,24 @@
     justify-content: space-between;
     
 }
+.search {
+    background: #fff;
+    width: 300px;
+    height: 30px;
+    border-radius: 20px;
+    font-family: 'Ubuntu', sans-serif;
+    position: relative;
+}
+fieldset {
+    border: 0 none;
+    position: absolute;
+    top: 5px;
+    left: 10px;
+}
+fieldset input {
+    border: 0 none;
+    text-align: center;
+}
 .hdBtm {
     width: 100%;
     background-color: rgb(245, 245, 245);
@@ -25,4 +43,28 @@
     padding: 10px 20px;
     margin: 0 auto;
     font-weight: bold;
+    position: relative;
+}
+.hdBtm ul li a {
+    text-align: center;
+}
+.hdBtm ul li:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 1px;
+    height: 40px;
+    background: rgb(173, 173, 173);
+    right: 0;
+    top: 0;
+}
+.hdBtm ul li:first-child::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 1px;
+    height: 40px;
+    background: rgb(173, 173, 173);
+    left: 0;
+    top: 0;  
 }
