--- a/03traval/css/style.css
+++ b/03traval/css/style.css
@@ -2,27 +2,81 @@
 #header {
     width: 100%;
     height: 100px;
-    background: rgb(37, 97, 165) url(../images/04비행기-Recovered.png) no-repeat center;
+    background: #0a6fa5 url(../images/04비행기-Recovered.png) no-repeat center;
+    position: fixed;
 }
 .hdTop {
     width: 1200px;
     margin: 0 auto;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     
 }
+.hdTop .search {
+    line-height: 35px;
+}
+.hdTop fieldset {
+    border: 0 none;
+}
+.hdTop form {
+    position: relative;
+}
+.hdTop .searchTitle {
+    font-family: 'Poppins', sans-serif;
+    position: absolute;
+    padding: 0 10px;
+    line-height: 40px;
+}
+.hdTop input {
+    text-align: right;
+}
+.hdTop form img {
+    position: absolute;
+    top: 13px;
+    right: 10px;
+} 
+.hdTop .searchArea {
+    border: 0 none;
+    border-radius: 50px;
+    padding: 5px 50px;
+}
+.util ul {
+    display: flex;
+}
+.util li {
+    padding: 5px;
+}
 .hdBtm {
     width: 100%;
     background-color: rgb(245, 245, 245);
+    
 
 }
 .hdBtm ul {
     width: 1200px;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hdBtm ul li{
-    padding: 10px 20px;
-    margin: 0 auto;
+    padding: 10px 60px;
     font-weight: bold;
+    border-right: 1px solid rgb(209, 209, 209);
+    font-size: 21px;
+}
+.hdBtm ul li:first-child {
+    border-left: 1px solid rgba(209, 209, 209);
+}
+.Wrap {
+    width: 100%;
+}
+.Wrap img {
+    width: 100%;
+}
+.contents {
+    width: 1200px;
+    margin: 0 auto;
+    border: 1px solid #000; /* 완료 후 삭제*/
 }
