--- a/03traval/css/style.css
+++ b/03traval/css/style.css
@@ -70,4 +70,17 @@
 .Wrap .contents {
     width: 1200px;
     margin: 0 auto;
+    border: 1px solid #000;
+}
+.reserv li a {
+    color: #fff;
+    display: block;
+    width: 150px;
+    text-align: center;
+    padding: 8px 10px;
+    background-color: rgb(36, 169, 209);
+}
+.reserv li a:hover {
+    color: #000;
+    background-color: #fff;
 }
