--- a/03traval/css/style.css
+++ b/03traval/css/style.css
@@ -4,6 +4,7 @@
     height: 100px;
     background-image: url(../images/04비행기-Recovered.png);
     position: fixed;
+    z-index: 1;
 }
 .hdTop {
     width: 1200px;
@@ -63,6 +64,7 @@
 }
 .Wrap {
     width: 100%;
+    position: relative;
 }
 .Wrap img {
     width: 100%;
@@ -70,14 +72,26 @@
 .Wrap .contents {
     width: 1200px;
     margin: 0 auto;
-    border: 1px solid #000;
+    position: absolute;
+    top: 130px;
+    left: 100px;
+    display: flex;
+}
+.contents form {
+    background-color: #fff;
+}
+.contents form fieldset {
+    border: 0 none;
+    font-weight: bold;
+    padding-left: 20px;
+    padding-top: 20px;
 }
 .reserv li a {
     color: #fff;
     display: block;
     width: 150px;
     text-align: center;
-    padding: 8px 10px;
+    padding: 20px 5px;
     background-color: rgb(36, 169, 209);
 }
 .reserv li a:hover {
