--- a/03traval/css/style.css
+++ b/03traval/css/style.css
@@ -64,7 +64,6 @@
 }
 .Wrap {
     width: 100%;
-    position: relative;
 }
 .Wrap img {
     width: 100%;
@@ -72,10 +71,6 @@
 .Wrap .contents {
     width: 1200px;
     margin: 0 auto;
-    position: absolute;
-    top: 130px;
-    left: 100px;
-    display: flex;
 }
 .contents form {
     background-color: #fff;
@@ -97,4 +92,7 @@
 .reserv li a:hover {
     color: #000;
     background-color: #fff;
+}
+fieldset ul li:nth-child(2) {
+    display: flex;
 }
