--- a/03traval/css/style.css
+++ b/03traval/css/style.css
@@ -1,13 +1,12 @@
 @charset "UTF-8";
-#header {
-    width: 100%;
-    height: 100px;
+.hdTopWrap{
     background-image: url(../images/04비행기-Recovered.png);
-    position: fixed;
-    z-index: 1;
+    background-repeat: no-repeat;
+    background-color: #0763a2;
+    background-position: center;
 }
 .hdTop {
-    width: 1200px;
+    width: 980px;
     padding: 8px;
     margin: 0 auto;
     display: flex;
@@ -49,6 +48,8 @@
     padding: 5px;
 }
 .hdBtm ul {
+    width: 1200px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,8 +57,8 @@
 .hdBtm li {
     border-right: 1px solid rgb(221, 221, 221);
     font-family: 'Nanum Gothic', sans-serif;
-    font-size: 20px;
-    padding: 5px 50px;
+    font-size: 16px;
+    padding: 5px 20px;
 }
 .hdBtm li.active {
     background: rgb(97, 97, 97);
@@ -66,16 +67,16 @@
     border-left: 1px solid rgb(221, 221, 221);;
 }
 .Wrap {
-    width: 100%;
-}
-.Wrap img {
-    width: 100%;
+    padding-top: 30px;
+    background: url(../images/01배경.jpg) no-repeat center;
+    background-size: cover;
 }
 .Wrap .contents {
-    width: 1200px;
+    width: 980px;
     margin: 0 auto;
     position: relative;
-    transform: translateY(-300%);
+    background-image: url(../images/02풍선.png);
+    background-position: right bottom;
 }
 .contents form {
     background-color: #fff;
@@ -117,53 +118,17 @@ form input {
 fieldset ul li:nth-child(2) {
     display: flex;
 }
-.contents>.txt {
-    font-family: 'Heebo', sans-serif;
-    font-size: 50px;
-    letter-spacing: 0.1em;
-    padding: 20px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-}
-.contents .txt .ko {
-    font-family: 'Gowun Dodum', sans-serif;
-    font-size: 20px;
-}
-.balloon {
-    float: right;
-}
-.balloon img{
-    width: 700px;
-    position: absolute;
-    top: 50px;
-    left: 40%;
-}
-.tour1>.tourImg img {
-    width: 240px;
-    margin-right: 20px;
-}
-.tour1 li {
+.reserv {
     float: left;
-    position: relative;
-    z-index: 1;
 }
-.tour1 li .txt {
-    position: absolute;
-    bottom: 10px;
-    background: rgba(5, 62, 88, 0.822);
-    color: #fff;
+.txt {float: right;}
+.txt .eng {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 40px;
+    letter-spacing: 0.08em;
 }
-.tour1 li .txt .num {
-    color: rgb(24, 112, 71);
-    font-weight: bold;
-    float: right;
-}
-.sliderWrap {
-    position: relative;
-}
-.sliderWrap .slider img {
-    width: 250px;
+.txt .ko {
+    font-family: 'Gothic A1', sans-serif;
 }
 .bx-wrapper {
     -moz-box-shadow: 0 none;
