--- a/04company/css/style.css
+++ b/04company/css/style.css
@@ -94,7 +94,8 @@ html,body {
     background: #fff;
 }
 .content>ul>li {
-    float: left;
+    /* float: left; */
+    flex-wrap: wrap;
     width: 25%;
     height: 310px;
     background: rgb(178, 204, 29);
@@ -103,7 +104,9 @@ html,body {
     background: rgb(29, 185, 15);
 }
 .content>ul>li:nth-child(1) {
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .content>ul>li:nth-child(2) {
     
@@ -112,10 +115,14 @@ html,body {
     width: 50%;
 }
 .content>ul>li:nth-child(4) {
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .content>ul>li:nth-child(5) {
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .content>ul>li:nth-child(6) {
     width: 50%;
@@ -130,10 +137,19 @@ html,body {
     
 }
 .content>ul>li:nth-child(10) {
-    
+    position: absolute;
+    bottom: 0;
+    right: 620px;
 }
 .content>ul>li:nth-child(11) {
+    position: absolute;
+    right: 0;
+    bottom: 0;
     width: 50%;
+}
+.content>ul {
+    display: flex;
+    flex-wrap: wrap;
 }
 /* //////pc 미디어 시작 //////// */
 @media screen and (min-width: 700px){
@@ -196,6 +212,15 @@ html,body {
         left: 50%;
         transform: translateX(-50%);
         bottom: 0;
+    }
+    .content .icon {
+        text-align: center;
+        width: 150px;
+        height: 150px;
+    }
+    .content .icon img {
+        margin: 0 auto;
+        margin-bottom: 10px;
     }
 }
 /* ////////pc 미디어 끝 /////// */
@@ -275,26 +300,31 @@ html,body {
 }
 .content>ul>li{
     width: 50%;
+    order: 11;
 }
 .content>ul>li:nth-child(1) {
-    
+    order: 4;
 }
 .content>ul>li:nth-child(2) {
-    
+    order: 2;
 }
 .content>ul>li:nth-child(3) {
-
+    order: 3;
 }
 .content>ul>li:nth-child(4) {
-    
+    order: 1;
+}
+.content>ul>li:nth-child(10) {
+    position: static;
+}
+.content>ul>li:nth-child(11) {
+    position: static;
 }
 .content>ul>li:nth-child(5),
 .content>ul>li:nth-child(6),
 .content>ul>li:nth-child(7),
 .content>ul>li:nth-child(8),
-.content>ul>li:nth-child(9),
-.content>ul>li:nth-child(10),
-.content>ul>li:nth-child(11) {
+.content>ul>li:nth-child(9){
     display: none;
 }
 }
