--- a/04company/css/style.css
+++ b/04company/css/style.css
@@ -151,6 +151,52 @@ html,body {
     display: flex;
     flex-wrap: wrap;
 }
+.slider2Wrap{
+    position: relative;
+    overflow: hidden;
+}
+.slider2Wrap .s2list {
+    height: 310px;
+}
+.slider2Wrap .s2list div {
+    float: left;
+    height: 100%;
+    width: 50%;
+}
+.slider2Wrap .s2list div.left {
+    width: 50%;
+    background: #fff;
+    padding: 50px;
+    padding-top: 80px;
+    position: relative;
+    z-index: 1;
+}
+.slider2Wrap .s2list div.left::after {
+    content: "";
+    display: block;
+    border-width: 30px;
+    border-color:transparent transparent transparent #f00 ;
+    border-style: solid;
+    width: 60px;
+    box-sizing: border-box;
+    position: absolute;
+    right: -60px;
+    top: calc(50% - 30px);
+}
+.slider2Wrap .s2list div.left {
+    width: 50%;
+}
+.slider2Wrap h2 {
+    position: absolute;
+    top: 40px;
+    left: 50px;
+}
+.slider2Wrap .btn {
+    position: absolute;
+    right: 40px;
+    bottom: 40px;
+    display: flex;
+}
 /* //////pc 미디어 시작 //////// */
 @media screen and (min-width: 700px){
     #main_header {
@@ -212,6 +258,9 @@ html,body {
         left: 50%;
         transform: translateX(-50%);
         bottom: 0;
+        border-radius: 20px 20px 0 0;
+        overflow: hidden;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
     .content .icon {
         text-align: center;
@@ -303,13 +352,11 @@ html,body {
     order: 11;
 }
 .content>ul>li:nth-child(1) {
-    order: 4;
-}
-.content>ul>li:nth-child(2) {
-    order: 2;
+    order: -1;
 }
 .content>ul>li:nth-child(3) {
     order: 3;
+    width: 100%;
 }
 .content>ul>li:nth-child(4) {
     order: 1;
@@ -320,12 +367,17 @@ html,body {
 .content>ul>li:nth-child(11) {
     position: static;
 }
+.content>ul>li:nth-child(2)
 .content>ul>li:nth-child(5),
 .content>ul>li:nth-child(6),
 .content>ul>li:nth-child(7),
 .content>ul>li:nth-child(8),
 .content>ul>li:nth-child(9){
     display: none;
+}
+.slider2Wrap .s2list div.right img {
+    transform: scale(1.3);
+    transform-origin: 0 0;
 }
 }
 /* ////////모바일 미디어 끝 /////// */
