--- a/04company/css/style.css
+++ b/04company/css/style.css
@@ -197,11 +197,70 @@ html,body {
     bottom: 40px;
     display: flex;
 }
+.container {
+    background: url(../images/contentsbg01.jpg) no-repeat center fixed;
+    background-size: cover;
+    padding: 60px 0;
+}
+.container .section {
+    width: 1240px;
+    margin: 0 auto;
+    color: #fff;
+}
+.container .section h4{
+    text-align: center;
+}
+.container .section h4::after {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 1px;
+    background: #fff;
+    margin: 20px auto;
+}
+.container .section>p{
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 2em;
+}
+.container .vision li {
+    float: left;
+    width: calc( (100% - 60px ) / 4 );
+    margin-right: 20px;
+    cursor: pointer;
+}
+.container .vision li:last-child {
+    margin-right: 0;
+}
+.container .vision li {
+    padding: 70px 30px;
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
+    border: 5px solid #ddd;
+    transition: 0.3s;
+}
+.container .vision li img {
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+.container .vision li .card_body {
+    padding: 5px;
+    text-align: center;
+    color: #000;
+}
+.container .vision li .card_body h3 {
+    margin-bottom: 20px;
+}
+.container .vision li:hover {
+    box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
+    transform: translate(-10px,-10px);
+}
 /* //////pc 미디어 시작 //////// */
 @media screen and (min-width: 700px){
     #main_header {
         height: 1950px;
         background: rgb(182, 182, 182);
+        margin-bottom: 60px;
     }
     #headerTop {
         width: 1240px;
@@ -378,6 +437,20 @@ html,body {
 .slider2Wrap .s2list div.right img {
     transform: scale(1.3);
     transform-origin: 0 0;
+}
+.container .section {
+    width: 100%;
+    padding: 0 20px;
+}
+.container .vision li {
+    width: calc( ( 100% - 20px ) / 2 );
+    margin-bottom: 20px;
+}
+.container .vision li:nth-child(2n) {
+    margin-right: 0;
+}
+.container .vision li .card_body p {
+    display: none;
 }
 }
 /* ////////모바일 미디어 끝 /////// */
