--- a/04company/css/style1.css
+++ b/04company/css/style1.css
@@ -5,6 +5,7 @@
     background: rgb(32, 32, 34);
     position: absolute;
     top: 20px;
+    z-index: 1;
 }
 .headerWrap {
     width: 1200px;
@@ -31,49 +32,155 @@ nav {
 .subMenu {
     display: none;
 }
-.visual {
-    width: 100%;
+.visualWrap {
+    width: 1920px;
     height: 500px;
     overflow: hidden;
 }
-.contents {
+.visualWrap img {
+    width: 100%;
+    float: left;
+}
+.contentWrap {
     width: 1200px;
     margin: 0 auto;
+    position: relative;
+}
+.contents {
+    position: absolute;
+    top: -100px;
 }
 .contents>ul>li {
    float: left;
    width: calc(1200px / 3);
-   height: 200px;
+   height: 250px;
 }
 .contents>ul>li:nth-child(1){
     width: 25%;
-    background: rgb(80, 80, 80);
+    background-image: url(../images2/gray.png);
 }
 .contents>ul>li:nth-child(1) .match {
     text-align: center;
-    padding: 5px;
     color: #fff;
+    padding-top: 20px;
+}
+.contents>ul>li:nth-child(1) .match .vs {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.contents>ul>li:nth-child(1) .match .vs img {
+    width: 100px;
+    margin: 10px;
+}
+.contents>ul>li:nth-child(1) .match .area {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.contents>ul>li:nth-child(1) .match .area p {
+    padding: 0 50px;
+    margin-bottom: 10px;
 }
 .contents>ul>li:nth-child(2){
     width: 50%;
-    background: rgb(182, 207, 36);
+    background: rgb(172, 72, 14);
+    color: #fff;
+}
+.contents>ul>li:nth-child(2) .link {
+    text-align: center;
+    margin: 20px;
+}
+.contents>ul>li:nth-child(2) li {
+    width: calc( 100% / 4 );
+    float: left;
+    padding: 5px;
+}
+.contents>ul>li:nth-child(2) .icon img {
+    margin: 0 auto;
+}
+.contents>ul>li:nth-child(2) .icon {
+    text-align: center;
 }
 .contents>ul>li:nth-child(3){
     width: 25%;
-    background: rgb(28, 128, 33);
+    background-image: url(../images2/a.png);
+    color: #fff;
+    font-weight: bold;
+    font-size: 30px;
+    letter-spacing: 30px;
+    text-align: center;
+}
+.contents>ul>li:nth-child(3) img{
+    width: 100px;
+    margin: 0 auto;
 }
 .contents>ul>li:nth-child(4){
     width: 25%;
-    background: rgb(204, 167, 44);
+    background-image: url(../images2/uracha.png);
+}
+.contents>ul>li:nth-child(4) .csr {
+    text-align: center;
+    padding-top: 20px;
+    padding: 50px 0;
+}
+.contents>ul>li:nth-child(4) h3 {
+    color: rgb(255, 102, 0);
+    padding-bottom: 10px;
+}
+.contents>ul>li:nth-child(4) h2 {
+    color: rgb(97, 97, 97);
+    margin-bottom: 20px;
+}
+.contents>ul>li:nth-child(4) p {
+    display: inline;
+    padding: 5px 20px;
+    font-size: 16px;
+    border: 1px solid rgb(104, 104, 104);
+    color: rgb(104, 104, 104);
+    font-weight: bold;
+    border-radius: 20px;
 }
 .contents>ul>li:nth-child(5){
     width: 25%;
-    background: rgb(36, 143, 84);
+    background-image: url(../images2/confirmjuju.png);
+}
+.contents>ul>li:nth-child(5) .juju {
+    text-align: center;
+    padding-top: 20px;
+    padding: 50px 0;
+}
+.contents>ul>li:nth-child(5) h2 {
+    color: rgb(97, 97, 97);
+    margin-bottom: 20px;
+}
+.contents>ul>li:nth-child(5) p {
+    display: inline;
+    padding: 5px 20px;
+    font-size: 16px;
+    border: 1px solid rgb(104, 104, 104);
+    color: rgb(104, 104, 104);
+    font-weight: bold;
+    border-radius: 20px;
+}
+.contents>ul>li:nth-child(5) h3 {
+    color: rgb(255, 102, 0);
+    padding-bottom: 10px;
 }
 .contents>ul>li:nth-child(6){
     width: 50%;
-    background: rgb(26, 53, 102);
+    background: url(../images2/d6.png) no-repeat;
+    background-size: cover;
 }
+.contents>ul>li:nth-child(6) .clip {
+    color: #fff;
+    margin: 20px;
+    font-size: 20px;
+}
+.contents .sliderWrap {
+    padding-top: 20px;
+}
+
 @media screen and (min-width: 700px){
     
 }
